# bedrock

./: .gitignore  Cargo.toml  LICENSE  build.rs  flake.nix  one.ron
.direnv/: flake-profile-1-link
.github/workflows/: check.yml  test.yml
data/: login-template.typ  template.typ
examples/: .gitignore  compile.rs  events.toml  html.rs  on_score.js  one.toml  render-test.toml  reverse-template.py  reverse-template.rs  template.rs  two.toml  typst_test.rs  uil.rs  uil.toml
nix-modules/: checks.nix  parts.nix  shell.nix
src/: custom_serde.rs  events.rs  integrations.rs  lib.rs  packet.rs  roi.rs  scoring.rs  templates.rs  tests.rs  util.rs  workspaces.rs
src/language/: language_set.rs  mod.rs
src/render/: markdown.rs  mod.rs  typst.rs
tests/: events-are-optional.toml  events-multiple-complex.toml  events-multiple-simple.toml  events-single-complex.toml  events-single.toml  events.rs  events.toml  hashing.rs  imports.rs  imports.toml  integrations.rs  on-complete.ts  on-score.js  roi.rs  scoring.rs  template.rs  template.toml
