[package]
name = "bedrock"
version = "1.0.0"
edition = "2021"

[features]
dev = [] # Make it so we don't have recompile when the template.typ is changed

[dependencies]
comemo = "0.4.0"
lazy_static = "1.5.0"
miette = { version = "7.6.0", features = ["fancy"] }
phf = { version = "0.11.3", features = ["macros"] }
# using 0.11.0 for `pulldown-cmark-ast`
pulldown-cmark = "0.11.3"
pulldown-cmark-ast = "0.1.0"
serde_json = "1.0.143"
serde = { version = "1.0.219", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive", "phf"] }
thiserror = "2.0.16"
time = "0.3.41"
tokio = { version = "1.47.1", features = ["fs", "io-util"], optional = true }
toml_edit = { version = "0.22.27", features = ["serde"] }
typst = "0.12.0"
typst-kit = { version = "0.12.0", features = ["embed-fonts"] }
typst-pdf = "0.12.0"
typst-svg = "0.12.0"
ecow = "0.2.6"
syntect = { version = "5.2.0", default-features = false, features = [
  "default-fancy",
] }
evalexpr = { version = "12.0.2", features = ["serde"] }
serde_with = "3.14.0"
url = { version = "2.5.7", features = ["serde"] }
humantime = "2.2.0"

[dev-dependencies]
bedrock = { path = ".", features = ["tokio"] }
tokio = { version = "1.47.1", features = ["full"] }
