[package]
name = "basalt-bedrock"
description = "Definitions for Basalt competition packets"
version = "1.0.0"
edition = "2021"
rust-version = "1.82"
authors = ["Jack Branch", "funnyboy-roks <funnyboyroks@gmail.com>"]
repository = "https://github.com/basalt-rs/bedrock"
license = "Apache-2.0"
keywords = ["basalt", "packet", "competition", "configuration", "pdf"]
categories = ["config"]
exclude = [".github"]

[features]
tokio = ["dep:tokio", "dep:tmpdir"]
render = ["dep:tempfile", "serde_json"]
default = ["render", "tokio"]

[dependencies]
miette = { version = "7.6.0", features = ["fancy"] }
phf = { version = "0.11.3", features = ["macros"] }
pulldown-cmark = "0.11.3"
serde_json = { version = "1.0.143", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive", "phf"] }
tmpdir = { version = "1.0.0", optional = true }
tempfile = { version = "3.23.0", optional = true }
thiserror = "2.0.16"
time = "0.3.41"
tokio = { version = "1.47.1", features = ["fs", "io-util", "process"], optional = true }
toml_edit = { version = "0.22.27", features = ["serde"] }
syntect = { version = "5.2.0", default-features = false, features = ["default-fancy"] }
evalexpr = { version = "12.0.2", features = ["serde"] }
serde_with = "3.14.0"
url = { version = "2.5.7", features = ["serde"] }
humantime = "2.2.0"

[dev-dependencies]
basalt-bedrock = { path = ".", features = ["tokio"] }
tokio = { version = "1.47.1", features = ["full"] }

[build-dependencies]
flate2 = "1.1.2"
reqwest = { version = "0.12.23", features = ["blocking"] }
tar = "0.4.44"

